ansible/roles/nginx/files/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:

      securityContext:
        runAsNonRoot: true
        runAsUser: 101

      containers:
      - name: nginx
        image: nginx:1.30.1

        ports:
        - containerPort: 80

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

          capabilities:
            drop:
              - ALL

        volumeMounts:
        - name: nginx-cache
          mountPath: /var/cache/nginx

        - name: nginx-run
          mountPath: /var/run

        - name: nginx-tmp
          mountPath: /tmp

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

      volumes:
      - name: nginx-cache
        emptyDir: {}

      - name: nginx-run
        emptyDir: {}

      - name: nginx-tmp
        emptyDir: {}
