ansible/roles/nginx/files/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx
            port:
              number: 80
