ansible/roles/nginx/files/nginx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: nginx-policy

spec:
  podSelector:
    matchLabels:
      app: nginx

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector: {}

    ports:
    - protocol: TCP
      port: 80

  egress:
  - {}
